--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    outline: 0;
     box-sizing: border-box;
 }
 body{
@@ -12,30 +13,101 @@ body{
 /*Header*/
 
 
-.navbar{
+.menu{
     background-color: black;
-    height: 173px;
+    height: 75px;
+    width: 100%;
     border-bottom: solid 1px white;
     display: flex;
-    width: 100vw;
     justify-content: space-between;
     align-items: center;
 }
-
-nav ul{
-    margin-top: 100px;
+.logo{
+    color: white;
+    font-size: 35px;
+    padding: 0 8px;
+    font-weight: bold;
+}
+.menu_items{
+    margin-right: 30px;
     display: flex;
     list-style: none;
 }
 
+.menu_items li{
+    margin: 0 5px;
+}
 
-nav ul li a{
+.menu_items li a{
+    padding:7px 13px;
+    font-size: 18px;
     color: white;
     text-decoration: none;
-    margin-right: 30px;
-    border-radius: 3px;
     display: block;
     
+}
+
+.menu_items li:hover, li.active{
+    background-color: rgba(0, 0, 0, .3);
+}
+.btn_menu{
+    margin-right: 30px;
+    font-size: 25px;
+    color: white;
+    cursor:pointer;
+    display: none;
+   
+}
+
+ul.show{
+    top:65px;
+}
+
+@media screen and (max-width:952px) {
+    .logo{
+        font-size: 30px;
+        padding-left: 35px;
+    }
+    .menu_items li a {
+        font-size: 16px;
+    }
+}
+@media screen and (max-width:858px){
+    .menu{
+        height: 65px;
+    }
+    .btn_menu{
+        display: inline-flex;
+    }
+
+    .menu_items{
+        position: fixed;
+        width: 100vw;
+        height: calc(100% - 65px);
+        background-color: black;
+        top: -100vh;
+        text-align: center;
+        transition: all .4s;
+        flex-direction: column;
+    }
+
+    .menu_items li{
+        margin: 30px 0 0 0;
+        line-height: 30px;
+    }
+
+    .menu_items li:hover{
+        background:none;
+    }
+
+    .menu_items li a:hover{
+        color:red;
+
+    }
+    .logo{
+        font-size: 25px;
+        padding-left: 35px;
+    }
 }
 /*Main Index*/
 
