--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,11 @@
-import @_global
+@import "global";
+@import "home";
+@import "skills";
+@import "portfolio";
+@import "experience";
+@import "contact"
+
+
+
+
+
