--- a/css/style.css
+++ b/css/style.css
@@ -1,238 +1,240 @@
-*{
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    box-sizing: border-box;
+/*Variables*/
+/*Body*/
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
-body{
+
+body {
+  background-color: black;
+  color: white;
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 1.4rem;
+}
+
+/*Menu*/
+.menu {
+  background-color: black;
+  height: 75px;
+  width: 100%;
+  border-bottom: solid 1px white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  color: white;
+  font-size: 35px;
+  padding: 0 8px;
+  font-weight: bold;
+}
+
+.menu_items {
+  margin-right: 30px;
+  display: flex;
+  list-style: none;
+}
+
+.menu_items li {
+  margin: 0 5px;
+}
+
+.menu_items li a {
+  padding: 7px 13px;
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.menu_items li:hover, li.active {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.btn_menu {
+  margin-right: 30px;
+  font-size: 25px;
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+
+ul.show {
+  top: 65px;
+}
+
+@media screen and (max-width: 952px) {
+  .logo {
+    font-size: 30px;
+    padding-left: 35px;
+  }
+
+  .menu_items li a {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 858px) {
+  .menu {
+    height: 65px;
+  }
+
+  .btn_menu {
+    display: inline-flex;
+  }
+
+  .menu_items {
+    position: fixed;
+    width: 100vw;
+    height: calc(100% - 65px);
     background-color: black;
-    color: white;
-    font-family: 'Zen Maru Gothic', sans-serif;
-    font-size: 1.4rem;
-}
-/*Header*/
+    top: -100vh;
+    text-align: center;
+    transition: all 0.4s;
+    flex-direction: column;
+  }
 
+  .menu_items li {
+    margin: 30px 0 0 0;
+    line-height: 30px;
+  }
 
-.menu{
-    background-color: black;
-    height: 75px;
-    width: 100%;
-    border-bottom: solid 1px white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo{
-    color: white;
-    font-size: 35px;
-    padding: 0 8px;
-    font-weight: bold;
-}
-.menu_items{
-    margin-right: 30px;
-    display: flex;
-    list-style: none;
-}
+  .menu_items li:hover {
+    background: none;
+  }
 
-.menu_items li{
-    margin: 0 5px;
-}
+  .menu_items li a:hover {
+    color: red;
+  }
 
-.menu_items li a{
-    padding:7px 13px;
-    font-size: 18px;
-    color: white;
-    text-decoration: none;
-    display: block;
-    
-}
-
-.menu_items li:hover, li.active{
-    background-color: rgba(0, 0, 0, .3);
-}
-.btn_menu{
-    margin-right: 30px;
+  .logo {
     font-size: 25px;
-    color: white;
-    cursor:pointer;
-    display: none;
-   
-}
-
-ul.show{
-    top:65px;
-}
-
-@media screen and (max-width:952px) {
-    .logo{
-        font-size: 30px;
-        padding-left: 35px;
-    }
-    .menu_items li a {
-        font-size: 16px;
-    }
-}
-@media screen and (max-width:858px){
-    .menu{
-        height: 65px;
-    }
-    .btn_menu{
-        display: inline-flex;
-    }
-
-    .menu_items{
-        position: fixed;
-        width: 100vw;
-        height: calc(100% - 65px);
-        background-color: black;
-        top: -100vh;
-        text-align: center;
-        transition: all .4s;
-        flex-direction: column;
-    }
-
-    .menu_items li{
-        margin: 30px 0 0 0;
-        line-height: 30px;
-    }
-
-    .menu_items li:hover{
-        background:none;
-    }
-
-    .menu_items li a:hover{
-        color:red;
-
-    }
-    .logo{
-        font-size: 25px;
-        padding-left: 35px;
-    }
-}
-/*Main Index*/
-
-.container-index{
-    display: flex;
-    width: 100%;
-    padding: 5%;
-    justify-content: space-between;
-    align-content: center;
-
-}
-
-.container-info{
-    border: solid 2px white;
-    padding: 20px;
-    width: 40rem;
-
-}
-.container-info ul{
-    margin-top: 1rem;
-}
-
-.container-info ul li{
-    text-decoration: none;
-    list-style: none;
-    margin-right: 10px;
-    display: inline;
-}
-.image{
-    background-color: #e5e5e5;
-    width: 400px;
-    height: 400px;
+    padding-left: 35px;
+  }
 }
 /*Footer*/
-
-footer{
-    background-color: black;
-    height: 150px;
-    padding-bottom: 30px;
-    border-top: solid 1px white;
-    width: 100%;
-  
+footer {
+  background-color: black;
+  height: 150px;
+  padding-bottom: 30px;
+  border-top: solid 1px white;
+  width: 100%;
 }
 
 footer div {
-    text-align: center;
+  text-align: center;
 }
 
-footer div ul{
-    margin-top: 1rem;   
-}
-footer div ul li{
-    display: inline;
- 
+footer div ul {
+  margin-top: 1rem;
 }
 
-/*Section Experience*/
+footer div ul li {
+  display: inline;
+}
 
-.jobContainer{
-    border: solid 3px white;
-    padding:30px;
-    margin-right: 70%;
+/*Main Index*/
+.container-index {
+  display: flex;
+  width: 100%;
+  padding: 5%;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.container-info {
+  border: solid 2px white;
+  padding: 20px;
+  width: 40rem;
+}
+
+.container-info ul {
+  margin-top: 1rem;
+}
+
+.container-info ul li {
+  text-decoration: none;
+  list-style: none;
+  margin-right: 10px;
+  display: inline;
+}
+
+.image {
+  background-color: #e5e5e5;
+  width: 400px;
+  height: 400px;
 }
 
 /*Portfolio*/
-.imgAgency{
-    width: 20rem;
+.imgAgency {
+  width: 20rem;
 }
 
-.imgDiet{
-    width: 15rem;
+.imgDiet {
+  width: 15rem;
 }
 
-.socialIcon{
-    border-radius: 45%;
-    border: solid 0.5px black;   
-    width: 48px;
+.socialIcon {
+  border-radius: 45%;
+  border: solid 0.5px black;
+  width: 48px;
+}
 
+/*Section Experience*/
+.jobContainer {
+  border: solid 3px white;
+  padding: 30px;
+  margin-right: 70%;
 }
 
 /*Contact */
-
-.container{
-    padding: 5%;
-}
-.container-grid{
-   display: grid;
-   grid-template-columns: 30% 30%;
-   grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-   grid-template-areas: 
-   "titulo titulo"
-    "nombre apellido"
-    "telefono email"
-    "terminos terminos"
-    "mensaje mensaje"
-    "enviar enviar"
-    ;
-    justify-content: center;
-    align-content: center;
-}
-#titulo{
-    grid-area: titulo;
-    text-align: center;
-}
-#nombre{
-    grid-area: nombre;
+.container {
+  padding: 5%;
 }
 
-#apellido{
-    grid-area: apellido;
+.container-grid {
+  display: grid;
+  grid-template-columns: 30% 30%;
+  grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  grid-template-areas: "titulo titulo" "nombre apellido" "telefono email" "terminos terminos" "mensaje mensaje" "enviar enviar";
+  justify-content: center;
+  align-content: center;
 }
-#telefono{
-    grid-area: telefono;
-}
-#email{
-    grid-area: email;
-}
-#terminos{
-    grid-area: terminos;
-}
-#mensaje{
-    grid-area: mensaje;
-    text-align: center;
-}
-#enviar{
-    grid-area: enviar;
 
+#titulo {
+  grid-area: titulo;
+  text-align: center;
 }
+
+#nombre {
+  grid-area: nombre;
+}
+
+#apellido {
+  grid-area: apellido;
+}
+
+#telefono {
+  grid-area: telefono;
+}
+
+#email {
+  grid-area: email;
+}
+
+#terminos {
+  grid-area: terminos;
+}
+
+#mensaje {
+  grid-area: mensaje;
+  text-align: center;
+}
+
+#enviar {
+  grid-area: enviar;
+}
+
+/*# sourceMappingURL=style.css.map */
