--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -22,7 +22,7 @@ body{
 /*Menu*/
 .menu{
     background-color: $mainColor;
-    height: 75px;
+    height: 95px;
     width: 100%;
     border-bottom: solid 1px $secondaryColor;
     display: flex;
@@ -31,7 +31,7 @@ body{
 }
 .logo{
     color: $secondaryColor;
-    font-size: 35px;
+    font-size: 1.4rem;
     padding: 0 8px;
     font-weight: bold;
 }
@@ -67,7 +67,7 @@ body{
 }
 
 ul.show{
-    top:65px;
+    top:85px;
 }
 
 @media screen and (max-width:952px) {
@@ -81,7 +81,7 @@ ul.show{
 }
 @media screen and (max-width:858px){
     .menu{
-        height: 65px;
+        height: 75px;
     }
     .btn_menu{
         display: inline-flex;
@@ -90,9 +90,9 @@ ul.show{
     .menu_items{
         position: fixed;
         width: 100vw;
-        height: calc(100% - 65px);
+        height: calc(100% - 85px);
         background-color: $mainColor;
-        top: -100vh;
+        top: -90vh;
         text-align: center;
         transition: all .4s;
         flex-direction: column;
@@ -104,7 +104,7 @@ ul.show{
     }
 
     .menu_items li:hover{
-        background:none;
+        background:grey;
     }
 
     .menu_items li a:hover{
