--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -18,7 +18,9 @@ body{
     font-family: 'Zen Maru Gothic', sans-serif;
     font-size: 1.4rem;
 }
-
+.container{
+    margin: 4%;
+}
 /*Menu*/
 .menu{
     background-color: $mainColor;
@@ -29,12 +31,7 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.logo{
-    color: $secondaryColor;
-    font-size: 1.4rem;
-    padding: 0 8px;
-    font-weight: bold;
-}
+
 .menu_items{
     margin-right: 30px;
     display: flex;
@@ -71,10 +68,6 @@ ul.show{
 }
 
 @media screen and (max-width:952px) {
-    .logo{
-        font-size: 30px;
-        padding-left: 35px;
-    }
     .menu_items li a {
         font-size: 16px;
     }
@@ -108,7 +101,7 @@ ul.show{
     }
 
     .menu_items li a:hover{
-        color:red;
+        color:$mainColor;
 
     }
     .logo{
