--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,29 @@ footer div ul li {
   width: 48px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 200px, 200px;
+  grid-template-rows: 200px, 200px;
+  grid-template-areas: "fila1-1 fila1-2" "fila2-1 fila2-2";
+}
+
+.fila1-1 {
+  grid-area: fila1-1;
+}
+
+.fila1-2 {
+  grid-area: fila1-2;
+}
+
+.fila2-1 {
+  grid-area: fila2-1;
+}
+
+.fila2-2 {
+  grid-area: fila2-2;
+}
+
 /*Section Experience*/
 .jobContainer {
   border: solid 3px white;
@@ -198,8 +221,10 @@ footer div ul li {
 }
 
 .contact-form {
+  max-width: 600px;
   margin: auto;
   padding: 0 10px;
+  overflow: hidden;
 }
 
 .contact-form-text {
