--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -15,9 +15,10 @@
 }
 
 .contact-form{
+    max-width: 600px;
     margin: auto;
     padding: 0 10px;
-
+    overflow: hidden;
 }
 
 .contact-form-text{
