--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -16,8 +16,8 @@
 
 .grid-container{
     display: grid;
-    grid-template-columns: 200px ,200px;
-    grid-template-rows: 200px, 200px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
     "fila1-1 fila1-2"
     "fila2-1 fila2-2";
