--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -7,15 +7,18 @@
     justify-content: space-between;
     align-content: center;
     flex-wrap: wrap;
+    min-height: 50vh;
 
 }
 @media screen and (max-width:858px) {
     .image{
         margin-top: 4rem;
         margin-bottom: 4rem;
+        order: 1;
     }
     .container-info{
         margin-top: 2rem;
+        order: 2;
     }
 }
 .container-info{
@@ -35,8 +38,4 @@
     margin-right: 10px;
     display: inline;
 }
-.image{
-    background-color: #e5e5e5;
-    width: 400px;
-    height: 400px;
-}
+
