--- a/css/style.css
+++ b/css/style.css
@@ -235,29 +235,48 @@ footer div ul li {
   grid-area: fila2-2;
 }
 
-/*Section Experience*/
-h1 {
-  text-align: center;
+@media screen and (max-width: 858px) {
+  .grid-container {
+    grid-template-areas: "fila1-1" "fila1-2" "fila2-1" "fila2-2";
+  }
 }
-
+/*Section Experience*/
 .jobContainer {
   border: solid 2px white;
   width: 40rem;
+  padding: 2%;
+  margin-top: 2rem;
 }
 
 .coderhouse {
-  width: 400px;
+  width: 24rem;
+  margin-left: 10%;
+}
+
+.technisys {
+  text-align: center;
+  margin-left: 30%;
 }
 
 .jobBox {
+  margin-top: 2rem;
   display: flex;
   justify-content: space-between;
   width: 100%;
   align-content: center;
   flex-wrap: wrap;
-  padding: 5%;
 }
 
+@media screen and (max-width: 858px) {
+  .coderhouse {
+    width: 18rem;
+    margin-left: 5%;
+  }
+
+  .technisys {
+    margin-left: 20%;
+  }
+}
 .contact-section {
   padding: 2rem 0;
 }
