--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -38,3 +38,13 @@
 .fila2-2{
     grid-area: fila2-2;
 }
+
+@media screen and (max-width:858px){
+    .grid-container{
+        grid-template-areas: 
+        "fila1-1"
+        "fila1-2"
+        "fila2-1"
+        "fila2-2";
+    }
+}
